--- a/Projects/Index.html
+++ b/Projects/Index.html
@@ -21,7 +21,7 @@
       <link href="/feed.xml" type="application/atom+xml" rel="alternate" title="Ari Grele Feed">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <script>document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';</script>
-      <link rel   = "stylesheet" href = "style.css">
+      <link rel   = "stylesheet" href = "../style.css">
       <link rel   = "preload"  href = "https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5/css/all.min.css" as = "style" onload = "this.onload=null; this.rel = 'stylesheet'">
       <link rel   = "preload"  href = "https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css"   as = "style" onload = "this.onload=null; this.rel = 'stylesheet'">
       <noscript>
