--- a/Research/Index.html
+++ b/Research/Index.html
@@ -90,7 +90,7 @@
                <li>
                   <p class="body_text">
                      <a class="side_image">
-                     <img src="../Assets/figure 1.svg" alt="Oncopeltus fasciatus robbing nectar from Asclepias fascicularis" itemprop="image" style="border-radius:0px;">
+                     <img src="../Assets/Figure 1.svg" alt="Potential mechanisms of interaction between leaf and nectar feeding insects" itemprop="image" style="border-radius:0px;">
                      </a>
                      To maximize their fitness, plants must reach an equilibrium between energy allocated to defense against herbivores and energy devoted to the attraction of pollinators. As plants respond adaptively to visiting insects, such as by increasing defensive compounds in their leaves after herbivore damage or decreasing volatile attractants after pollination, the chemical traits of foliar and floral tissues are constantly being tuned to the specific interactions a plant experiences. While folivores and pollinators are directly impacted, and directly impact, the chemistry of the tissues they interact with, they are also capable of altering plant chemistry in other tissues, and may indirectly alter interactions between plants and other guilds of insects. Additionally, many phytochemicals used to defend against herbivores and attract pollinators have shared biosynthetic pathways. The induction or down-stepping of a pathway in response to insect activity in one tissue can alter the regulation of the same pathway in other tissues, altering the chemical profiles involved in plant-insect interactions. Although there exist a considerable number of studies investigating how phytochemistry mediates plant-insect interactions, existing meta-analyses focus on in-vitro studies of single phytochemicals on insect behavior, or use extremely broad chemical classes, such as comparing primary metabolites to specialized metabolites.
                </p>
@@ -106,7 +106,7 @@
                <li>
                   <p class="body_text">
                      <a class="side_image">
-                     <img src="../Assets/nectar.png" alt="Oncopeltus fasciatus robbing nectar from Asclepias fascicularis" itemprop="image">
+                     <img src="../Assets/nectar.png" alt="Accumulated nectar in the hood of an Asclepias speciosa flower" itemprop="image">
                      </a>
                      Although pollination is a multimodal process, with insects making use of visual, olfactory, tactile, and gustatory cues to locate flowers, nectar a major interface between pollinators and plants when on the flower. As such, nectar is an interface through which plants can manipulate insect behavior. Nectar is a high energy reward, and many non-pollinators have developed strategies to consume nectar while bypassing plant structures that deposit pollen. Additionally, many insects pollinate plants with low efficiency, consuming a disproportionate amount of nectar for the amount of pollen they transfer. Chemical means of filtering out low quality pollinators and larcenists, or improving the quality of visiting pollinators, would greatly improve a plant's ability to reproduce. As phytochemical profiles can be altered by plant responses to herbivory, nectar also has the potential to act as a chemical mediator of herbivore-pollinator interactions. The nectar robber hypothesis suggests that nectar chemistry will be directly linked to the identity of visiting pollinators, and that specific compounds present in nectar will be negatively or positively associated with insect taxa in relation to their efficiency as pollinators. The pollinator quality hypothesis suggests that nectar chemistry will drive pollinator behaviors that impact pollination efficiency, such as visitation rate and foraging time
                   </p>
@@ -121,7 +121,7 @@
                <li>
                   <p class="body_text">
                      <a class="side_image">
-                     <img src="../Assets/onco.JPG" alt="Oncopeltus fasciatus robbing nectar from Asclepias fascicularis" itemprop="image">
+                     <img src="../Assets/bombus.png" alt="Bumblebee with genus level identification assigned by a convolutional neural network" itemprop="image">
                      </a>
                      Field based studies of pollinator behavior are frequently limited in scope. The amount of labor required to observe flowers for extended time periods means that many pollinator studies lack the data to accurately estimate pollinator visitation rates and foraging times.
                      While video based methods for collecting visitation data can avoid some of these issues, considerable storage space and post-processing are required to extract usable data from videos.
