--- a/About.html
+++ b/About.html
@@ -56,7 +56,7 @@
       </div>
       <div class="splash">
          <div class="head"></div>
-         <img src="Assets/splash2-small.jpg" alt="Header image" itemprop="image" style="object-position: 40% 40%; width: 120%;">
+         <img src="Assets/splash2-small.JPG" alt="Header image" itemprop="image" style="object-position: 40% 40%; width: 120%;">
          <p>About Ari ↓</p>
       </div>
       <div style="position: relative; background-color: white;">
